# marching-cubes-vof

./: CMakeLists.txt  README.md
include/: constants.h  marchingcubes.h
src/: generateContourMC.c  main.c
